# mmappet

./: .gitignore  CHANGELOG  LICENCE  pyproject.toml
.github/workflows/: run_tests.yml
examples/cpp/: Makefile  indexed_reader_example.cpp  indexed_writer_example.cpp  mmap_writer.cpp  reader_example.cpp  test_indexed_write.py  writer_example.cpp
scripts/: mmappet_show.py
src/cpp/mmappet/: mmappet.cpp  mmappet.h
src/mmappet/: __init__.py  __main__.py  dirty_hacks_experimental_never_use.py  mmappet.py
src/mmappet/cpp/mmappet/: mmappet.h  mmappet_dyn.h
src/mmappet/mmappet_cpp/mmappet/: mmappet.cpp  mmappet.h  write.cpp
src/mmappet/scripts/: mmappet_show.py
tests/Python/: test_roundtrip.py
