[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmappet"
version = "0.1.1"
description = "Appendable, mmappable format for DataFrames on disk"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
polars = ["polars"]
pyarrow = ["pyarrow"]
testing = ["pytest"]

[project.scripts]
mmappet_show = "mmappet.scripts.mmappet_show:main"

[tool.setuptools_scm]
write_to = "src/mmappet/__scm_version.py"