[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmappet"
version = "0.1.1"
description = "Appendable, mmappable format for DataFrames on disk"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
polars = ["polars"]
pyarrow = ["pyarrow"]
testing = ["pytest", "cppyy"]

[project.scripts]
mmappet_show = "mmappet.scripts.mmappet_show:main"

[tool.setuptools]
package-data = {"mmappet" = ["cpp/mmappet/*.h", "cpp/mmappet/*.hpp"]}
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"
